--- a/scss/editor/callouts/_callout-timeline.scss
+++ b/scss/editor/callouts/_callout-timeline.scss
@@ -24,7 +24,7 @@
     --bullet-size: 8px;
     --bullet-numbered-size: 20px;
     --bullet-radius: 50%;
-    --bullet-color: var(--background-primary);
+    --bullet-color: var(--workleaves-background);
     --bullet-border-width: 1px;
     --bullet-border-color: var(--line-color);
     --bullet-outline-width: 3px;
