--- a/scss/window/_workspace.scss
+++ b/scss/window/_workspace.scss
@@ -1,7 +1,7 @@
 /* ----------- App background color ----------- */
 body,
 .workspace {
-    background-color: var(--background-secondary);
+    background-color: var(--workspace-background);
 }
 
 /* ----------- Workspace ----------- */
