--- a/scss/editor/_kpr-headings.scss
+++ b/scss/editor/_kpr-headings.scss
@@ -56,7 +56,7 @@
     --h1-line-height: 1.2em;
     --h1-size: 3em;
     --h1-font: var(--font-typewriter), var(--font-text);
-    --h1-color: var(--background-primary);
+    --h1-color: var(--workleaves-background);
     --h1-background: var(--color-base-100);
 
     background-color: var(--h1-background);
