--- a/scss/editor/callouts/_callout-email.scss
+++ b/scss/editor/callouts/_callout-email.scss
@@ -67,7 +67,7 @@
         > .callout-content { 
             flex-grow: 1;
             border: var(--callout-border-width) solid rgba(var(--callout-color), var(--callout-border-opacity));
-            background-color: var(--background-primary);
+            background-color: var(--workleaves-background);
             color: var(--text-normal);
         }
     }
