--- a/scss/editor/lists/_family-tree.scss
+++ b/scss/editor/lists/_family-tree.scss
@@ -25,7 +25,7 @@ ul:has(.tag[href='#family-tree']) {
         width: 10px;
         height: 10px;
         border-radius: 50%;
-        background: var(--background-primary);
+        background: var(--workleaves-background);
         border: 1px solid var(--color-accent);
         z-index: 1;
     }
@@ -33,10 +33,10 @@ ul:has(.tag[href='#family-tree']) {
         background: var(--color-accent);
     }
     .list-collapse-indicator:hover {
-        background: color-mix(in srgb, var(--color-accent), var(--background-primary) 70%);
+        background: color-mix(in srgb, var(--color-accent), var(--workleaves-background) 70%);
     }
     .list-collapse-indicator.is-collapsed:hover {
-        background: color-mix(in srgb, var(--color-accent), var(--background-primary) 30%);
+        background: color-mix(in srgb, var(--color-accent), var(--workleaves-background) 30%);
     }
     .list-collapse-indicator svg {
         display: none;
@@ -107,7 +107,7 @@ ul:has(.tag[href='#family-tree']) {
         padding-top: 10px;
         margin-top: 0px;
         position: relative;
-        background-color: var(--background-primary);
+        background-color: var(--workleaves-background);
     }
 
     li {
