--- a/scss/window/_sidebar.scss
+++ b/scss/window/_sidebar.scss
@@ -5,7 +5,7 @@
 
 /* Sidedocks workleaves */
 .mod-sidedock .workspace-leaf {
-    background-color: var(--background-primary);
+    background-color: var(--workleaves-background);
     box-shadow: inset 0 0 20px 3px rgba(0, 0, 0, 0.5);
     mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent 100%, black)
         calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius));
@@ -38,3 +38,7 @@
     left: calc(var(--cutout-corner-radius) + var(--cutout-outline-inset));
 }
 
+.mod-sidedock .workspace-tab-header-container {
+    --icon-color: var(--workspace-foreground-muted);
+    --icon-color-hover: var(--workspace-foreground);
+}
