--- a/scss/editor/_kpr-headings.scss
+++ b/scss/editor/_kpr-headings.scss
@@ -52,7 +52,6 @@
 
 .kpr-h1-display .markdown-preview-view:not(:is(.newspaper, .h1-stroke, .h1-normal)) h1,
 .markdown-preview-view.h1-display h1 {
-    --caret-color: var(--h1-color);
     --h1-line-height: 1.2em;
     --h1-size: 3em;
     --h1-font: var(--font-typewriter), var(--font-text);
@@ -61,7 +60,6 @@
 
     background-color: var(--h1-background);
     text-align: center;
-    caret-color: var(--caret-color);
     position: relative;
     padding: var(--cutout-outline-inset);
     clip-path: polygon(
@@ -78,7 +76,7 @@
         content: "";
         position: absolute;
         inset: var(--cutout-outline-inset);
-        background: var(--background-primary);
+        background: var(--h1-border-color);
         clip-path: polygon(
             0 var(--cutout-corner-angle),
             var(--cutout-corner-angle) 0,
@@ -100,11 +98,15 @@
             1px calc(var(--cutout-corner-angle) + 0.5px));
     }
 
+    &:is(.is-collapsed > h1)::before {
+        background: var(--h1-border-color-collapsed);
+    }
+
     &:is(.is-collapsed > h1)::after {
         content: "";
         position: absolute;
         inset: 0;
-        background: var(--collapse-icon-color-collapsed);
+        background: var(--h1-border-color-collapsed);
         clip-path: polygon(
             0 0,
             100% 0,
@@ -140,7 +142,7 @@
         content: "";
         display: block;
         flex-grow: 1;
-        background-color: currentColor;
+        background-color: var(--h1-border-color);
         height: 1px;
     }
 
@@ -148,12 +150,12 @@
         content: "";
         display: block;
         flex-grow: 1;
-        background-color: currentColor;
+        background-color: var(--h1-border-color);
         height: 1px;
     }
 
     &:is(.is-collapsed > h1)::before,
     &:is(.is-collapsed > h1)::after {
-        background-color: var(--collapse-icon-color-collapsed);
+        background-color: var(--h1-border-color-collapsed);
     }
 }
