--- a/scss/editor/callouts/_callout-pinned.scss
+++ b/scss/editor/callouts/_callout-pinned.scss
@@ -10,7 +10,7 @@
     --callout-title-weight: var(--h3-weight);
     --callout-title-size: var(--h3-size);
     --callout-padding: var(--size-4-3) var(--size-4-3) var(--size-4-3) var(--size-4-3);
-    --callout-font-header: var(--h1-font);
+    --callout-font-header: var(--font-typewriter);
     --callout-font-body: var(--font-typewriter);
     --pushpin-size: 40px;
     --pushpin-scale-collapsed: 0.8;
