--- a/scss/editor/callouts/_callout-profile.scss
+++ b/scss/editor/callouts/_callout-profile.scss
@@ -1,5 +1,5 @@
 .callout[data-callout="profile"] {
-    --callout-color: 150, 150, 150;
+    --callout-color: var(--color-gray-rgb);
     --callout-icon: lucide-user;
     --callout-title-size: 1.5em;
     --callout-border-width: 1px;
@@ -20,7 +20,7 @@
     }
 
     & .callout-content>p:first-child img {
-        width: 150px;
+        max-width: 150px;
         position: relative;
         border: var(--callout-border-width) solid rgba(var(--callout-color), 0.5);
         box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.5);
