--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -166,6 +166,12 @@ settings:
         type: heading
         collapsed: true
         level: 1
+    -
+        id: file-line-width
+        title: Line width
+        type: variable-number
+        format: px
+        default: 700
     - 
         id: kpr-plain-tables
         title: Use plain table style
