Doc + other fixes

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -168,7 +168,7 @@ settings:
         level: 1
     -
         id: file-line-width
-        title: Line width
+        title: File line width
         type: variable-number
         format: px
         default: 700
