--- a/scss/editor/_editor.scss
+++ b/scss/editor/_editor.scss
@@ -2,7 +2,7 @@
 @use 'blockquotes/blockquote';
 @use 'callouts/callouts';
 @use 'code';
-@use 'embeds-inline';
+@use 'embed-faded';
 @use 'embeds';
 @use 'headings';
 @use 'highlight';
@@ -15,3 +15,7 @@
 @use 'table';
 
 @use 'kpr-headings';
+
+.markdown-source-view, .markdown-reading-view {
+    container: markdown-view / inline-size;
+}
