--- a/scss/editor/blockquotes/_blockquote-caption.scss
+++ b/scss/editor/blockquotes/_blockquote-caption.scss
@@ -1,34 +1,41 @@
+s.caption {
+    text-decoration: none;
+}
+
 blockquote:has(.caption) {
     padding: 0;
     width: fit-content;
     max-width: 100%;
+}
 
-    .image-embed {
+@scope (blockquote:has(.caption)) {
+    :scope .internal-embed.image-embed {
         display: block;
         font-size: 0;
+        margin-bottom: calc(-1 * var(--image-shadow-offset));
+        margin-top: 0;
     }
-}
 
+    :scope .caption {
+        font-size: 0.8em;
+        display: block;
+        width: fit-content;
+        margin-inline-end: auto;
+        font-style: italic;
+        border-bottom: 1px dashed var(--color-accent);
+        background-color: color-mix(in srgb, var(--workleaves-background), hsl(var(--accent-h), var(--accent-s), var(--accent-l)) 20%);
+        padding-inline-start: 4px;
+        padding-inline-end: 16px;
+        margin-top: 0;
+        position: relative;
+        z-index: 1;
+    }
 
-blockquote .caption {
-    /*direction: rtl;*/
-    font-size: 0.8em;
-    display: block;
-    width: fit-content;
-    margin-inline-end: auto;
-    font-style: italic;
-    border-bottom: 1px dashed var(--color-accent);
-    background-color: hsla(var(--accent-h), var(--accent-s), var(--accent-l), 0.2);
-    padding-inline-start: 4px;
-    padding-inline-end: 16px;
-    margin-top: 0;
-}
+    :scope p {
+        margin-block: 0;
+    }
 
-blockquote p:has(.image-embed):has(+ p .caption),
-blockquote p:has(.image-embed) + p:has(.caption) {
-    margin-block: 0;
-}
-
-blockquote .image-embed + br:has(+ .caption) {
-    display: none;
+    .image-embed + br {
+        display: none;
+    }
 }
